--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,43 @@
     --grid-cols: 1;
     --grid-rows: 1;
   }
-  
-  .container {
-    align-items: center;
-    justify-content: center;
-    display: grid;
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
-    grid-auto-flow: column;
-  }
-  
-  .grid-item {
-    padding: 1em;
-    border: 1px solid #ddd;
-    text-align: center;
-  }
+body {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: left;
+    gap: 50px;
+
+}
+
+
+.options {
+  height: 50px;
+  width: 100px;
+  margin-right: 0;
+  margin-left: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.container {
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  grid-template-rows: repeat(var(--grid-rows), 1fr);
+  grid-template-columns: repeat(var(--grid-cols), 1fr);
+  grid-auto-flow: column;
+  min-height: 200px;
+  min-width: auto;
+  margin: 50px;
+}
+
+.grid-item {
+  padding: 1em;
+  border: 1px solid #ddd;
+  text-align: center;
+  height: 15px;
+  width: auto;
+}
 
