--- a/styles.css
+++ b/styles.css
@@ -3,43 +3,39 @@
     --grid-cols: 1;
     --grid-rows: 1;
   }
-body {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: left;
-    gap: 50px;
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-
 .options {
+  display: flex;
   height: 50px;
-  width: 100px;
-  margin-right: 0;
-  margin-left: 30px;
-  justify-content: center;
+  margin-top: 100px;
+  gap: 10px;
   align-items: center;
 }
 
-
-
-.container {
+.grid {
   align-items: center;
   justify-content: center;
   display: grid;
   grid-template-rows: repeat(var(--grid-rows), 1fr);
   grid-template-columns: repeat(var(--grid-cols), 1fr);
   grid-auto-flow: column;
-  min-height: 200px;
-  min-width: auto;
-  margin: 50px;
+  width: 700px;
+  height: 700px;
+  margin: 2rem;
+  border: 2px solid burlywood;
 }
 
 .grid-item {
   padding: 1em;
-  border: 1px solid #ddd;
+  border: 0.01px solid #ddd;
   text-align: center;
-  height: 15px;
   width: auto;
+  height: auto;
 }
-
