--- a/styles.css
+++ b/styles.css
@@ -6,36 +6,44 @@
 
 .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .options {
   display: flex;
-  height: 50px;
-  margin-top: 100px;
+  flex-direction:column;
+  
+  /* margin-top: 50px; */
+  margin-left: 50px;
   gap: 10px;
   align-items: center;
 }
 
 .grid {
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   display: grid;
   grid-template-rows: repeat(var(--grid-rows), 1fr);
   grid-template-columns: repeat(var(--grid-cols), 1fr);
   grid-auto-flow: column;
   width: 700px;
   height: 700px;
-  margin: 2rem;
-  border: 2px solid burlywood;
+  /* margin: 2rem; */
+  border: 2px solid black;
 }
 
 .grid-item {
-  padding: 1em;
   border: 0.01px solid #ddd;
   text-align: center;
   width: auto;
   height: auto;
+}
+
+h1 {
+  text-align: center;
+
+
 }
